# auto-doas

./: README.md  pyproject.toml
auto_doas/: __init__.py  config.py  retrieval.py
auto_doas/data/: dataset.py
auto_doas/models/: context.py  encoder.py  end_to_end.py  forward.py  losses.py
auto_doas/physics/: atmosphere.py  cross_sections.py  geometry.py  solar_reference.py
auto_doas/train/: continual.py  trainer.py
tests/: test_atmosphere.py  test_continual.py  test_end_to_end_model.py  test_forward_model.py  test_geometry.py  test_retrieval.py  test_solar_reference.py
