[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-doas"
version = "0.1.0"
description = "Unsupervised DOAS Level-0 to gas retrieval prototype"
authors = [{name = "AutoDOAS Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "torch",
]

[tool.setuptools.packages.find]
include = ["auto_doas"]
